--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - Love Nature</title>
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="/styles/home.css">
 </head>
 <body>
   <header>
@@ -14,14 +14,14 @@
         <div class="navigation-container">
           <div class="navigation-sub-container">
             <div class="navigation-logo">
-              <img style="width: 60px;" src="./imgs/logo-white.svg" alt="">
+              <img style="width: 60px;" src="/imgs/logo-white.svg" alt="">
             </div>
             <nav>
               <ul>
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Services</a>
-                <a href="">Contact</a>
+                <a href="/pages/index.html">Home</a>
+                <a href="/pages/about.html">About</a>
+                <a href="/pages/services.html">Services</a>
+                <a href="/pages/contact.html">Contact</a>
               </ul>
               <div class="phone-number">
                 <button class="call-btn">202-555-0188</button>
@@ -79,7 +79,7 @@
       <div class="quotes-container">
         <img style="opacity: 0.3;" src="./imgs/quotes.svg" alt="">
         <p class="quotes-content">"Original and with an innate understanding of their <br> customer’s needs, the team at Love Nature are <br> always a pleasure to work with."</p>
-        <img class="avatar-home" src="/imgs/avatar_on_home.png" alt="">
+        <img class="avatar-home" src="/imgs/avatar_on_home.pngD:" alt="">
         <p class="avatar-name">Jane Miller</p>
       </div>
     </div>
@@ -111,14 +111,14 @@
       <div class="footer-sub-container">
         <div class="footer-nav">
           <ul>
-            <li><a class="nav-footer-item" href="/">Home</a></li>
-            <li><a class="nav-footer-item" href="/">About</a></li>
-            <li><a class="nav-footer-item" href="/">Services</a></li>
-            <li><a class="nav-footer-item" href="/">Contact</a></li>
+            <li><a class="nav-footer-item" href="/pages/index.html">Home</a></li>
+            <li><a class="nav-footer-item" href="/pages/about.html">About</a></li>
+            <li><a class="nav-footer-item" href="/pages/services.html">Services</a></li>
+            <li><a class="nav-footer-item" href="/pages/contact.html">Contact</a></li>
           </ul>
         </div>
         <div style="width: 339.906px">
-          <img class="logo-green" src="./imgs/logo-green.svg" alt="">
+          <img class="logo-green" src="/imgs/logo-green.svg" alt="">
         </div>
         <div style="width: 339.906px">
           <p>Love Nature by Tyler Moore</p>
@@ -128,3 +128,4 @@
   </footer>
 </body>
 </html>
+
