--- a/pages/services.html
+++ b/pages/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="services.css">
+  <link rel="stylesheet" href="/styles/services.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <title>Services - Love Nature</title>
 </head>
@@ -15,14 +15,14 @@
         <div class="navigation-container">
           <div class="navigation-sub-container">
             <div class="navigation-logo">
-              <img style="width: 60px;" src="./imgs/logo-white.svg" alt="">
+              <img style="width: 60px;" src="/imgs/logo-white.svg" alt="">
             </div>
             <nav>
               <ul>
-                <a href="/index.html">Home</a>
-                <a href="">About</a>
-                <a href="/services.html">Services</a>
-                <a href="">Contact</a>
+                <a href="/pages/index.html">Home</a>
+                <a href="/pages/about.html">About</a>
+                <a href="/pages/services.html">Services</a>
+                <a href="/pages/contact.html">Contact</a>
               </ul>
               <div class="phone-number">
                 <button class="call-btn">202-555-0188</button>
@@ -41,7 +41,7 @@
       <div class="services-container">
         <div class="services-item">
           <div class="services-img">
-            <img src="./imgs/service-1.jpg" alt="">
+            <img src="/imgs/service-1.jpg" alt="">
           </div>
           <div class="services-desc">
             <h4 class="desc-title">Web Design</h4>
@@ -54,7 +54,7 @@
 
         <div class="services-item">
           <div class="services-img">
-            <img src="./imgs/service-2.jpg" alt="">
+            <img src="/imgs/service-2.jpg" alt="">
           </div>
           <div class="services-desc">
             <h4 class="desc-title">Graphic Design</h4>
@@ -67,7 +67,7 @@
 
         <div class="services-item">
           <div class="services-img">
-            <img src="./imgs/service-3.jpg" alt="">
+            <img src="/imgs/service-3.jpg" alt="">
           </div>
           <div class="services-desc">
             <h4 class="desc-title">Content Creation</h4>
@@ -124,14 +124,14 @@
       <div class="footer-sub-container">
         <div class="footer-nav">
           <ul>
-            <li><a class="nav-footer-item" href="/">Home</a></li>
-            <li><a class="nav-footer-item" href="/">About</a></li>
-            <li><a class="nav-footer-item" href="/">Services</a></li>
-            <li><a class="nav-footer-item" href="/">Contact</a></li>
+            <li><a class="nav-footer-item" href="/pages/index.html">Home</a></li>
+            <li><a class="nav-footer-item" href="/pages/about.html">About</a></li>
+            <li><a class="nav-footer-item" href="/pages/services.html">Services</a></li>
+            <li><a class="nav-footer-item" href="/pages/contact.html">Contact</a></li>
           </ul>
         </div>
         <div style="width: 339.906px">
-          <img class="logo-green" src="./imgs/logo-green.svg" alt="">
+          <img class="logo-green" src="/imgs/logo-green.svg" alt="">
         </div>
         <div style="width: 339.906px">
           <p>Love Nature by Tyler Moore</p>
