Love Nature(html-css)

--- a/pages/index.html
+++ b/pages/index.html
@@ -94,7 +94,7 @@
             <button class="find-out-more">Find Out More</button>
           </div>
         </div>
-          <img class="about-img" src="./imgs/leaf.jpg" alt="">
+          <img class="about-img" src="/imgs/leaf.jpg" alt="">
       </div>
     </div>
     <!-- questions-content -->
