--- a/pages/index.html
+++ b/pages/index.html
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="services-item">
-          <img class="img-services" src="./imgs/service-3.jpg" alt="">
+          <img class="img-services" src="/imgs/service-3.jpg" alt="">
           <div class="services-item-content">
             <span class="title-services">Content Creation</span>
             <p class="content-services">Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.
@@ -77,7 +77,7 @@
     <!-- quotes-content -->
     <div class="quotes">
       <div class="quotes-container">
-        <img style="opacity: 0.3;" src="./imgs/quotes.svg" alt="">
+        <img style="opacity: 0.3;" src="/imgs/quotes.svg" alt="">
         <p class="quotes-content">"Original and with an innate understanding of their <br> customer’s needs, the team at Love Nature are <br> always a pleasure to work with."</p>
         <img class="avatar-home" src="/imgs/avatar_on_home.pngD:" alt="">
         <p class="avatar-name">Jane Miller</p>
