Love-Nature_HTML-CSS

--- a/pages/index.html
+++ b/pages/index.html
@@ -51,14 +51,14 @@
       <div class="services-line"></div>
       <div class="services-collection">
         <div class="services-item">
-          <img class="img-services" src="./imgs/service-1.jpg" alt=""> <br>
+          <img class="img-services" src="/imgs/service-1.jpg" alt=""> <br>
           <div class="services-item-content">
             <span class="title-services">Web Design</span> <br>
             <p class="content-services">Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.</p>
           </div>
         </div>
         <div class="services-item">
-          <img class="img-services" src="./imgs/service-2.jpg" alt="">
+          <img class="img-services" src="/imgs/service-2.jpg" alt="">
           <div class="services-item-content">
             <span class="title-services">Graphic Design</span> <br>
             <p class="content-services">Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.</p>
