Love-Nature_HTML-CSS

--- a/pages/about.html
+++ b/pages/about.html
@@ -60,7 +60,7 @@
     </div>
     <div class="quotes">
       <div class="quotes-container">
-        <img style="opacity: 0.3;" src="./imgs/quotes.svg" alt="">
+        <img style="opacity: 0.3;" src="/imgs/quotes.svg" alt="">
         <p class="quotes-content">“Love Nature has an amazing team of hard working <br> professionals. It has been a pleasure to meet them.”</p>
         <img class="avatar-home" src="/imgs/avatar_on_about.png" alt="">
         <p class="avatar-name">Emily Davis</p>
